--- a/earnerList.html
+++ b/earnerList.html
@@ -23,15 +23,13 @@
                         <table class="table table-bordered align-middle" id="earnerTable">
                             <thead>
                                 <tr>
-                                    <th>#</th>
+                                    <th>ID</th>
                                     <th>Email</th>
-                                    <th>Contact</th>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Badge ID</th>
-                                    <th>Organization</th>
+                                    <th>Name</th>
                                     <th>Address</th>
-                                    <th>Issue Date</th>
+                                    <th>Organization</th>
+                                    <th>Badges</th>
+                                    <th>Contact</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -43,10 +41,30 @@
                 </div>
             </div>
         </div>
+
+        <!-- Earner Details Modal -->
+        <div class="modal fade" id="earnerViewModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content border-0 shadow">
+                    <div class="modal-header text-black">
+                        <h5 class="modal-title fw-bold">Earner Details</h5>
+                        <button type="button" class="btn-close btn-close-black" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <table class="table table-bordered m-0">
+                            <tbody id="earnerDetailsBody"></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <div id="footer-container"></div>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="earnerList.js"></script>
     <script src="issuer.js"></script>
 </body>
 
