--- a/issuerHome.html
+++ b/issuerHome.html
@@ -12,24 +12,47 @@
     <!-- ✅ Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-    <!-- ✅ Optional Font for cleaner look -->
+    <!-- ✅ Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="badgeStyle.css">
 </head>
 
 <body class="layout-page">
     <!-- ✅ Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-    <!-- ✅ Empty Body Section -->
-    <main> </main>
+    <!-- ✅ Main Content -->
+    <main class="container my-1">
+        <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap gap-3">
+            <h4 class="fw-semibold mb-0">Badges</h4>
 
+            <!-- ✅ Search -->
+            <div class="d-flex">
+                <input type="text" id="searchInput" class="form-control me-2"
+                    placeholder="Search by Badge ID / Name / Description">
+                <button id="searchBtn" class="btn btn-primary">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+            </div>
+        </div>
+
+        <!-- ✅ Badges Grid -->
+        <div id="badgesContainer" class="row g-4"></div>
+
+        <!-- ✅ Pagination -->
+        <div id="paginationContainer" class="d-flex justify-content-center mt-4"></div>
+    </main>
+
+    <!-- ✅ Footer Placeholder -->
     <div id="footer-container"></div>
 
     <!-- ✅ Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- ✅ Issuer JS for badges images api calling -->
+    <script src="issuerHome.js"></script>
     <!-- ✅ Issuer JS (handles navbar load + logic) -->
     <script src="issuer.js"></script>
 </body>
