--- a/issuerHome.html
+++ b/issuerHome.html
@@ -29,7 +29,7 @@
             <h4 class="fw-semibold mb-0">Badges</h4>
 
             <!-- ✅ Search -->
-            <div class="d-flex">
+            <div class="d-flex my-1">
                 <input type="text" id="searchInput" class="form-control me-2"
                     placeholder="Search by Badge ID / Name / Description">
                 <button id="searchBtn" class="btn btn-primary">
