--- a/earnerList.html
+++ b/earnerList.html
@@ -64,6 +64,7 @@
     <div id="footer-container"></div>
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="earnerList.js"></script>
     <script src="issuer.js"></script>
 </body>
