--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     <!-- Bootstrap + FontAwesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            padding-top: 20px;
-        }
     </style>
 </head>
 
 <body>
-    <div class="login-container text-center">
+    <div class="login-container text-center mt-3">
         <div class="mb-3">
             <div class="mx-auto rounded-circle d-flex align-items-center justify-content-center bg-info"
                 style="width: 80px; height: 80px;">
@@ -26,53 +24,45 @@
             </div>
         </div>
         <h4 class="fw-bold mb-2">Welcome to BadgeConnect Issuer Login </h4>
-        <p id="form-subtitle" class="text-muted small mb-2">Please select your login method</p>
+        <p id="form-subtitle" class="text-muted small mb-2">Please sign in to continue</p>
 
-        <!-- Login Method Selection -->
-        <div id="method-selection">
-            <div class="d-flex justify-content-center gap-2 flex">
-                <button class="btn btn-outline-primary w-50" id="loginEmailBtn">Login with Email</button>
-                <button class="btn btn-outline-primary w-50" id="loginMobileBtn">Login with Mobile</button>
+        <form id="loginForm">
+            <div class=" text-start">
+                <label for="text" class="form-label fw-semibold mb-2">Email or phone</label>
+                <input type="text" class="form-control" id="email" placeholder="Enter your email or phone..." required>
             </div>
-        </div>
+            <button type="submit" id="sendOtpBtn" class="btn btn-info w-100 text-white fw-semibold mt-3">Send
+                OTP</button>
+        </form>
 
-        <!-- Email/Mobile Input Section -->
-        <div id="input-section" class="d-none mt-4 text-start">
-            <div id="emailInputDiv" class="d-none">
-                <label for="issuerEmail" class="form-label fw-semibold">Email address</label>
-                <input type="email" id="issuerEmail" class="form-control mb-3" placeholder="Enter your email">
+        <!-- OTP Verification Form (Initially Hidden) -->
+        <form id="otpForm" class="d-none">
+            <div class="mb-3 text-start">
+                <label for="verifyEmail" class="form-label fw-semibold">Email address</label>
+                <input type="email" class="form-control" id="verifyEmail" readonly>
             </div>
-            <div id="mobileInputDiv" class="d-none">
-                <label for="issuerMobile" class="form-label fw-semibold">Mobile number</label>
-                <input type="tel" id="issuerMobile" class="form-control mb-3" placeholder="Enter your mobile number">
+
+            <div class="d-flex justify-content-between mb-3">
+                <input type="text" maxlength="1" class="form-control text-center otp-input">
+                <input type="text" maxlength="1" class="form-control text-center otp-input mx-1">
+                <input type="text" maxlength="1" class="form-control text-center otp-input mx-1">
+                <input type="text" maxlength="1" class="form-control text-center otp-input ">
+                <input type="text" maxlength="1" class="form-control text-center otp-input mx-1">
+                <input type="text" maxlength="1" class="form-control text-center otp-input mx-1">
             </div>
-            <button class="btn btn-primary w-100 mb-3" id="sendOtpBtn">Send OTP</button>
-            <button class="btn btn-secondary w-100" id="cancel"
+
+            <p class="small text-muted mb-1">
+                Didn’t get the code?
+                <span id="resendLink" class="text-primary fw-semibold"
+                    style="cursor:pointer; pointer-events:none; opacity:0.6;">
+                    Click to resend
+                </span>
+            </p>
+            <p class="small text-secondary mb-3">Resend in <span id="timer">01:00</span></p>
+            <button type="submit" class="btn btn-info w-100 text-white fw-semibold">Login</button>
+            <button type="button" class="btn btn-secondary w-100 mt-2"
                 onclick="window.location.href='index.html'">Cancel</button>
-        </div>
-
-        <!-- OTP Section -->
-        <div id="otp-section" class="d-none mt-4 text-start">
-            <label for="readonlyValue" id="readonlyLabel" class="form-label fw-semibold"></label>
-            <input type="text" id="readonlyValue" class="form-control mb-3" readonly>
-
-            <div class="d-flex justify-content-center mb-3 flex-wrap" id="otpInputs"></div>
-
-            <!-- Timer + Resend Section -->
-            <div class="text-center mb-3">
-                <p class="small text-muted mb-1">
-                    Didn’t get the code?
-                    <span id="resendText" class="text-primary fw-semibold resend-text disabled">
-                        Click to resend OTP
-                    </span>
-                <p class="small text-secondary mb-1" id="timerText">Resend in <span id="timerValue">01:00</span></p>
-                </p>
-            </div>
-
-            <!-- Buttons -->
-            <button class="btn btn-info w-100 text-white fw-semibold" id="loginBtn">Login</button>
-            <button class="btn btn-secondary w-100 mt-2" id="cancelBtn">Cancel</button>
-        </div>
+        </form>
 
     </div>
 
