--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <label for="text" class="form-label fw-semibold mb-2">Email or phone</label>
                 <input type="text" class="form-control" id="email" placeholder="Enter your email or phone..." required>
             </div>
-            <button type="submit" id="sendOtpBtn" class="btn btn-info w-100 text-white fw-semibold mt-3">Send
+            <button type="submit" id="sendOtpBtn" class="btn btn-primary w-100 text-white fw-semibold mt-3">Send
                 OTP</button>
         </form>
 
@@ -59,7 +59,7 @@
                 </span>
             </p>
             <p class="small text-secondary mb-3">Resend in <span id="timer">01:00</span></p>
-            <button type="submit" class="btn btn-info w-100 text-white fw-semibold">Login</button>
+            <button type="submit" class="btn btn-primary w-100 text-white fw-semibold">Login</button>
             <button type="button" class="btn btn-secondary w-100 mt-2"
                 onclick="window.location.href='index.html'">Cancel</button>
         </form>
