Added unique profile id instead of plain id

--- a/earnerList.html
+++ b/earnerList.html
@@ -23,7 +23,7 @@
                         <table class="table table-bordered align-middle" id="earnerTable">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
+                                    <th>Profile ID</th>
                                     <th>Email</th>
                                     <th>Name</th>
                                     <th>Address</th>
