Overall stats repord added

--- a/issuerHome.html
+++ b/issuerHome.html
@@ -38,6 +38,14 @@
             </div>
         </div>
 
+        <div class="overallStats p-3 m-2">
+            <div class="row fw-semibold">
+                <div class="col-md-3">Total Badges Issued</div>
+                <div class="col-md-3">Paid</div>
+                <div class="col-md-3">Unpaid</div>
+            </div>
+        </div>
+
         <!-- ✅ Badges Grid -->
         <div id="badgesContainer" class="row g-4"></div>
 
