--- a/issuerHome.html
+++ b/issuerHome.html
@@ -25,7 +25,7 @@
 
     <!-- ✅ Main Content -->
     <main class="container my-1">
-        <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap gap-3">
+        <div class="d-flex justify-content-between align-items-center mb-2 flex-wrap gap-3">
             <h4 class="fw-semibold mb-0">Badges</h4>
 
             <!-- ✅ Search -->
@@ -38,7 +38,9 @@
             </div>
         </div>
 
-        <div class="overallStats p-3 m-2">
+        <!-- Overall stats -->
+
+        <div class="overallStats p-3 mb-2">
             <div class="row fw-semibold">
                 <div class="col-md-3">Total Badges Issued</div>
                 <div class="col-md-3">Paid</div>
